# obj-to-ramses

./: .gitmodules  CMakeLists.txt  README.md
src/: ObjImporter.cpp  SceneToText.cpp  main.cpp
src/include/: ObjGeometry.h  ObjImporter.h  RendererEventHandler.h  SceneToText.h
